; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_vtshim.c_vtshimCopyModule.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_vtshim.c_vtshimCopyModule.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_ERROR = common dso_local global i32 0, align 4
@SQLITE_NOMEM = common dso_local global i32 0, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32**)* @vtshimCopyModule to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vtshimCopyModule(i32* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32**, i32*** %5, align 8
  %11 = icmp ne i32** %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %9, %2
  %13 = load i32, i32* @SQLITE_ERROR, align 4
  store i32 %13, i32* %3, align 4
  br label %27

14:                                               ; preds = %9
  %15 = call i32* @sqlite3_malloc(i32 4)
  store i32* %15, i32** %6, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32, i32* @SQLITE_NOMEM, align 4
  store i32 %19, i32* %3, align 4
  br label %27

20:                                               ; preds = %14
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @memcpy(i32* %21, i32* %22, i32 4)
  %24 = load i32*, i32** %6, align 8
  %25 = load i32**, i32*** %5, align 8
  store i32* %24, i32** %25, align 8
  %26 = load i32, i32* @SQLITE_OK, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %20, %18, %12
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32* @sqlite3_malloc(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
